Adjust dockerconfigs to postgresql

--- a/.docker-config/php/Dockerfile
+++ b/.docker-config/php/Dockerfile
@@ -4,7 +4,10 @@ RUN apt-get update && apt-get install -y \
         libfreetype6-dev libjpeg62-turbo-dev \
         libmcrypt-dev libpng-dev libbz2-dev \
         libssl-dev autoconf \
-        ca-certificates curl g++ libicu-dev
+        ca-certificates curl g++ libicu-dev \
+        wget \
+        gnupg2 \
+        lsb-release
 
 RUN docker-php-ext-install \
         bcmath bz2 exif \
@@ -12,17 +15,27 @@ RUN docker-php-ext-install \
         shmop sockets sysvmsg sysvsem sysvshm \
         zip iconv mcrypt pdo_mysql intl
 
+# Install Postgre PDO
+RUN apt-get install -y libpq-dev \
+    && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
+    && docker-php-ext-install pdo pdo_pgsql pgsql
+
 RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/
 
 RUN apt-get install -y --no-install-recommends libmagickwand-dev && \
         pecl install imagick-3.4.3 && \
         docker-php-ext-enable imagick
 
+RUN wget -q -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - && \
+    sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -sc)-pgdg main" > /etc/apt/sources.list.d/PostgreSQL.list' && \
+    apt-get update && \
+    apt-get install -y postgresql-client-10
+
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin/ --filename=composer
 RUN composer global require hirak/prestissimo
 
-RUN echo "upload_max_filesize = 10M" > /usr/local/etc/php/php.ini && \
-    echo "post_max_size = 10M" >> /usr/local/etc/php/php.ini && \
+RUN echo "upload_max_filesize = 20M" > /usr/local/etc/php/php.ini && \
+    echo "post_max_size = 20M" >> /usr/local/etc/php/php.ini && \
     echo "max_execution_time = 300" >> /usr/local/etc/php/php.ini && \
     echo "memory_limit = 256M" >> /usr/local/etc/php/php.ini
 
