--- a/src/composer.json
+++ b/src/composer.json
@@ -22,7 +22,11 @@
   "require": {
     "craftcms/cms": "^3.0.0",
     "vlucas/phpdotenv": "^2.4.0",
-    "craftcms/redactor": "^2.1.0"
+    "craftcms/redactor": "^2.1.0",
+    "craftcms/aws-s3": "1.1.1",
+    "markhuot/craftql": "1.3.1",
+    "verbb/field-manager": "2.0.5",
+    "verbb/super-table": "2.1.15"
 },
   "autoload": {
     "psr-4": {
